Forge Beta: 12-#-2014 ver 1.5.32


# cards in total.


-------------
Release Notes
-------------

- Add Shift+click support for Mana Pool icons -
You can now hold the Shift key when clicking on mana pool icons to use as much of that mana type as possible towards the cost.


---------
New Cards
---------

Assault Suit
Domineering Will
Incite Rebellion
Infernal Offering
Loreseeker's Stone
Shared Fate
Wave of Vitriol


------------
Known Issues
------------

- Commander 2014 cards -
Forge now includes many of the new Commander 2014 cards. It may take a few days/weeks before these new card pictures become available for downloading via the "Download LQ Card Pictures" button. The LQ set pictures tend to take a few more weeks/months to process before they become available for downloading via the "Download LQ Set Pictures" button. Please be patient. The Forge devs are not involved in maintaining the servers that house these pictures.

- New Khans of Tarkir cards -
Forge now includes many of the new Khans of Tarkir cards. It may take a few days/weeks before these new card pictures become available for downloading via the "Download LQ Card Pictures" button. The LQ set pictures tend to take a few more weeks/months to process before they become available for downloading via the "Download LQ Set Pictures" button. Please be patient. The Forge devs are not involved in maintaining the servers that house these pictures.

- Continued Work on Conspiracy -