@@ -13107,6 +13107,7 @@ forge-gui/res/cardsfolder/s/sprouting_vines.txt svneol=native#text/plain
 forge-gui/res/cardsfolder/s/spur_grappler.txt svneol=native#text/plain
 forge-gui/res/cardsfolder/s/spurnmage_advocate.txt svneol=native#text/plain
 forge-gui/res/cardsfolder/s/spurred_wolverine.txt svneol=native#text/plain
+forge-gui/res/cardsfolder/s/spy_network.txt -text
 forge-gui/res/cardsfolder/s/squadron_hawk.txt svneol=native#text/plain
 forge-gui/res/cardsfolder/s/squall.txt svneol=native#text/plain
 forge-gui/res/cardsfolder/s/squall_drifter.txt svneol=native#text/plain
