@@ -1,0 +1,10 @@
+Name:Spy Network
+ManaCost:U
+Types:Instant
+A:SP$ Pump | Cost$ U | ValidTgts$ Player | TgtPrompt$ Select target player. | SubAbility$ DBHand | StackDescription$ SpellDescription | SpellDescription$ Look at target player's hand, the top card of that player's library, and any face-down creatures he or she controls.
+SVar:DBHand:DB$ LookAt | Defined$ ValidHand Card.TargetedPlayerCtrl | SubAbility$ DBTopLibrary | StackDescription$ None
+SVar:DBTopLibrary:DB$ LookAt | Defined$ ValidAll Card.TopLibrary+TargetedPlayerCtrl | SubAbility$ DBFaceDown | StackDescription$ None
+SVar:DBFaceDown:DB$ LookAt | Defined$ Valid Creature.faceDown+TargetedPlayerCtrl | SubAbility$ DBRearrange | StackDescription$ None
+SVar:DBRearrange:DB$ RearrangeTopOfLibrary | Defined$ You | NumCards$ 4
+SVar:Picture:http://www.wizards.com/global/images/magic/general/spy_network.jpg
+Oracle:Look at target player's hand, the top card of that player's library, and any face-down creatures he or she controls. Look at the top four cards of your library, then put them back in any order.
