@@ -17,11 +17,14 @@ New Cards
 ---------
 
 Assault Suit
+Aven Soulgazer
 Domineering Will
 Incite Rebellion
 Infernal Offering
 Loreseeker's Stone
 Shared Fate
+Smoke Teller
+Spy Network
 Wave of Vitriol
 
 
